# flayout-wgpu

./: Cargo.toml  LICENSE  README.md
docs/: CHANGE_ENTRY_POINTS.md  LAYOUT_IMPORT_GUIDE.md  PERF_CACHE_GUIDE.md  READING_GUIDE.md  RENDER_FRAME_GUIDE.md  SHAPE_TO_PIXEL_GUIDE.md  SOURCE_INDEX.md  TEST_WALKTHROUGH.md  performance-tuning.md  rendering-architecture.md
examples/: memory_probe.rs
src/: error.rs  lib.rs  main.rs  perf.rs
src/app/: mod.rs
src/camera/: mod.rs
src/config/: mod.rs
src/io/: laykit_loader.rs  mod.rs
src/layout/: mod.rs  view_builder.rs
src/persistence/: mod.rs
src/renderer/: geometry.rs  mod.rs  pipeline.rs  scene.wgsl  shader.wgsl
src/scene/: mod.rs
src/ui/: mod.rs
tests/: camera_test.rs  io_test.rs  memory_architecture_test.rs  perf_test.rs  persistence_test.rs  renderer_test.rs
